[package]
name = "legacy-device"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[dependencies]
byteorder = ">=1.2.1"
epoll = "=4.0.1"
libc = ">=0.2.39"
vm-device = { path = "../vm-device" }
vm-memory = { git = "https://github.com/rust-vmm/vm-memory" }
vmm-sys-util = { git = "https://github.com/liujing2/vmm-sys-util" }

[dev-dependencies]
tempfile = ">=3.0.2"
