[package]
name = "vmm"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
epoll = "=4.0.1"
kvm-bindings = "0.1"
kvm-ioctls = "0.1.0"
libc = ">=0.2.39"
log = "*"
net_util = { path = "../net_util" }
pci = {path = "../pci"}
qcow = { path = "../qcow" }
linux-loader = { git = "https://github.com/bjzhjing/linux-loader" }
legacy-device = { path = "../legacy-device" }
vm-device = { path = "../vm-device" }
vm-allocator = { path = "../vm-allocator" }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = { git = "https://github.com/liujing2/vmm-sys-util" }

[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
features = ["backend-mmap"]
